--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
 
       <div class="welcome">
-        <div class="welcomBan"><img id="ban-img" src="./assets/img/welcome-1.jpg" alt="welcome" width="auto" height="auto"/></div>
+        <div class="welcomBan"><img id="ban-img" src="./assets/img/welcome-1.jpg" oncontextmenu="return false;" alt="welcome" width="auto" height="auto"/></div>
         <div class="status"><div class="round ONLINE"></div><i>&nbsp;open to work</i></div>
         <div class="projects">
           <div class="project">
