--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <a href="https://boiler-shop-react.vercel.app/" id="link-boutique" target="_blank"><span class="projectTitle">Online Store Example</span></a>
                 <br>
                 <span class="languages">
-                  <div class="round REACT"></div>React JS &nbsp;&nbsp;
+                  <div class="round REACT"></div>React JS</span>
               </div>
               <br>
               <div class="descriptionLink">
@@ -141,7 +141,16 @@
                 <a href="https://velib-api-yannguiot.vercel.app/" id="link-velib" target="_blank"><span class="projectTitle">Velib API Example</span></a>
                 <br>
                 <span class="languages">
-                  <div class="round REACT"></div>React JS &nbsp;&nbsp;
+                  <div class="round REACT"></div>React JS</span>
+              </div>
+              <br>
+              <div class="descriptionLink">
+                <div class="circle"></div>
+                <a href="https://angular-pokemon-app-jet.vercel.app/" id="link-pokemon" target="_blank"><span class="projectTitle">Pokemon App</span></a>
+                <br>
+                <span class="languages">
+                  <div class="round ANGULAR"></div>Angular<div class="round TYPESCRIPT"></div>TypeScript &nbsp;&nbsp;
+                  <a href="https://github.dev/YannGUIOT/Angular_Pokemon_App/tree/master/src/app" target="_blank"><img id="folder-logo4" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a></span>
               </div>
               <br>
             </div>
