--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
       <div class="welcome">
         <div class="welcomBan"><img id="ban-img" src="./assets/img/welcome-1.jpg" oncontextmenu="return false;" alt="welcome" width="auto" height="auto"/></div>
-        <div class="status"><div class="round ONLINE"></div><i>&nbsp;open to work / Learning Angular & TypeScript</i></div>
+        <div class="status"><div class="round ONLINE"></div><i>&nbsp;open to work</i></div>
         <div class="projects">
           <div class="project">
             <div class="title">&nbsp;&nbsp; THP - FORMATION FULLSTACK - FINAL GROUP PROJECTS</div>
