--- a/index.html
+++ b/index.html
@@ -153,6 +153,15 @@
                   <a href="https://github.dev/YannGUIOT/Angular_Pokemon_App/tree/master/src/app" target="_blank"><img id="folder-logo4" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a></span>
               </div>
               <br>
+              <div class="descriptionLink">
+                <div class="circle"></div>
+                <a href="https://visit-card-app.vercel.app/" id="link-visitcard" target="_blank"><span class="projectTitle">Visit Card App</span></a>
+                <br>
+                <span class="languages">
+                  <div class="round REACT"></div>React JS &nbsp;&nbsp;
+                  <a href="https://github.com/YannGUIOT/Visit_Card_App/blob/master/src/class/Card.jsx" target="_blank"><img id="folder-logo5" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a></span>
+              </div>
+              <br>
             </div>
             <br>
           </div>
