--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
               <p>LinkedIn</p>
             </div>
           </a>
+          <button onclick="openPopUpCV()">CV</button>
         </div>
         <br><br><br>
         <div class="contact">
