--- a/index.html
+++ b/index.html
@@ -163,6 +163,15 @@
                   <a href="https://github.com/YannGUIOT/Visit_Card_App/blob/master/src/class/Card.jsx" target="_blank"><img id="folder-logo5" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a></span>
               </div>
               <br>
+              <div class="descriptionLink">
+                <div class="circle"></div>
+                <a href="https://buddha-quiz.vercel.app/" id="link-buddha" target="_blank"><span class="projectTitle">Buddha Quiz</span></a>
+                <br>
+                <span class="languages">
+                  <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript &nbsp;&nbsp;
+                  <a href="https://github.com/YannGUIOT/jQuery-Buddha-Quiz/blob/master/script.js" target="_blank"><img id="folder-logo6" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a></span>
+              </div>
+              <br>
             </div>
             <br>
           </div>
