--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <a href="https://boiler-shop-react.vercel.app/" id="link-boutique" target="_blank"><span class="projectTitle">Online Store Example</span></a>
                 <br>
                 <span class="languages">
-                  <div class="round REACT"></div>React JS</span>
+                  <div class="round REACT"></div>React Js</span>
               </div>
               <br>
               <div class="descriptionLink">
@@ -142,7 +142,7 @@
                 <a href="https://velib-api-yannguiot.vercel.app/" id="link-velib" target="_blank"><span class="projectTitle">Velib API Example</span></a>
                 <br>
                 <span class="languages">
-                  <div class="round REACT"></div>React JS</span>
+                  <div class="round REACT"></div>React Js</span>
               </div>
               <br>
               <div class="descriptionLink">
@@ -159,7 +159,7 @@
                 <a href="https://visit-card-app.vercel.app/" id="link-visitcard" target="_blank"><span class="projectTitle">Visit Card App</span></a>
                 <br>
                 <span class="languages">
-                  <div class="round REACT"></div>React JS &nbsp;&nbsp;
+                  <div class="round REACT"></div>React Js &nbsp;&nbsp;
                   <a href="https://github.com/YannGUIOT/Visit_Card_App/blob/master/src/class/Card.jsx" target="_blank"><img id="folder-logo5" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a></span>
               </div>
               <br>
@@ -170,6 +170,15 @@
                 <span class="languages">
                   <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript &nbsp;&nbsp;
                   <a href="https://github.com/YannGUIOT/jQuery-Buddha-Quiz/blob/master/script.js" target="_blank"><img id="folder-logo6" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a></span>
+              </div>
+              <br>
+              <div class="descriptionLink">
+                <div class="circle"></div>
+                <a href="https://designextjs.vercel.app/" id="link-designext" target="_blank"><span class="projectTitle">Design Examples</span></a>
+                <br>
+                <span class="languages">
+                  <div class="round NEXT"></div>Next Js&nbsp;&nbsp;
+                </span>
               </div>
               <br>
             </div>
