--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
 <body>
   <header>
     <nav>
-      <div>
-        <ul>
-          <li><a href="https://github.com/YannGUIOT" target="_blank"><img src="./assets/img/icons/github.png" alt="github" width="auto" height="auto"></a></li>
-          <li><span>Yann GUIOT</span></li>
-          <li><span>-</span></li>
-          <li><span>Fullstack&nbsp; Web&nbsp; Developer</span></li>
-        </ul>
+      <div class="nav-presentation">
+          <div><a href="https://github.com/YannGUIOT" target="_blank"><img src="./assets/img/icons/github.png" alt="github" width="auto" height="auto"></a></div>
+          <div>Yann GUIOT</div>
+          <div>-</div>
+          <div>Fullstack</div><div>Web</div><div>Developer</div>
       </div>
       <div class="slide-mode">
         <p id="dark">Dark&nbsp;</p>
