--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <div>-</div>
           <div>Fullstack</div><div>Web</div><div>Developer</div>
       </div>
+      <div class="nav-space"></div>
       <div class="slide-mode">
         <p id="dark">Dark&nbsp;</p>
         <img id="slide" src="./assets/img/icons/mode-1.png" alt="slide" width="auto" height="32px"/>
