--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="status"><div class="round ONLINE"></div><i>&nbsp;open to work</i></div>
         <div class="projects">
           <div class="project">
-            <div class="title">&nbsp;&nbsp; THP - FORMATION FULLSTACK - FINAL GROUP PROJECTS</div>
+            <div class="title">THP - FORMATION FULLSTACK - FINAL GROUP PROJECTS</div>
             <div class="description">
               <br>
               <div class="descriptionLink">
@@ -100,7 +100,7 @@
             </div>
           </div>
           <div class="project">
-            <div class="title">&nbsp;&nbsp; PERSONAL STUDY EXERCISES</div>
+            <div class="title">PERSONAL STUDY EXERCISES</div>
             <div class="description">
               <br>
               <div class="descriptionLink">
