--- a/index.html
+++ b/index.html
@@ -79,22 +79,30 @@
             <div class="description">
               <br>
               <div class="descriptionLink">
-                <div class="circle"></div>
-                <a href="https://classic-racing-school.fly.dev/" id="link-racing" target="_blank"><span class="projectTitle">Classic Racing School</span></a>
-                <br>
-                <span class="languages">
-                  <div class="round RUBY"></div>Ruby On Rails &nbsp;&nbsp;
-                  <a href="https://github.com/DylanDor/Classic_Racing_School" target="_blank"><img id="folder-logo1" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a> </span></a>
+                <div class="line-part-1">
+                  <div class="circle"></div>
+                  <a href="https://classic-racing-school.fly.dev/" id="link-racing" target="_blank"><span class="projectTitle">Classic Racing School</span></a>
+                  <br>
+                </div>
+                <div class="line-part-2">
+                  <span class="languages">
+                    <div class="round RUBY"></div>Ruby On Rails &nbsp;&nbsp;
+                    <a href="https://github.com/DylanDor/Classic_Racing_School" target="_blank"><img id="folder-logo1" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a> </span></a>
+                </div>
               </div>
               <br>
               <div class="descriptionLink">
-                <div class="circle"></div>
-                <a href="https://the-packing-hroject-8rmg.vercel.app/" id="link-tph" target="_blank"><span class="projectTitle">The Packing Hroject</span></a>
-                <!-- <a href="ipfs://bafybeidxnma2eaqa5di5pl7c7rtctm5gyltiy4hluztiomdsfjxngr44cu/" id="link-tph" target="_blank"><span class="web3">(ipfs)</span></a> -->
-                <br>
-                <span class="languages">
-                  <div class="round REACT"></div>React JS &nbsp;&nbsp;
-                  <a href="https://github.com/DevGiack/The-Packing-Hroject" target="_blank"><img id="folder-logo2" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a> </span></a>
+                <div class="line-part-1">
+                  <div class="circle"></div>
+                  <a href="https://the-packing-hroject-8rmg.vercel.app/" id="link-tph" target="_blank"><span class="projectTitle">The Packing Hroject</span></a>
+                  <!-- <a href="ipfs://bafybeidxnma2eaqa5di5pl7c7rtctm5gyltiy4hluztiomdsfjxngr44cu/" id="link-tph" target="_blank"><span class="web3">(ipfs)</span></a> -->
+                  <br>
+                </div>
+                <div class="line-part-2">
+                  <span class="languages">
+                    <div class="round REACT"></div>React JS &nbsp;&nbsp;
+                    <a href="https://github.com/DevGiack/The-Packing-Hroject" target="_blank"><img id="folder-logo2" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a> </span></a>
+                </div>
               </div>
               <br>
             </div>
@@ -104,80 +112,116 @@
             <div class="description">
               <br>
               <div class="descriptionLink">
-                <div class="circle"></div>
-                <a href="https://tic-tac-toe-roan-xi.vercel.app/" id="link-morpion" target="_blank"><span class="projectTitle">Tic-Tac-Toe</span></a>
-                <br>
-                <span class="languages">
-                  <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript &nbsp;&nbsp;
-                  <a href="https://github.com/YannGUIOT/TIC-TAC-TOE/blob/master/script.js" target="_blank"><img id="folder-logo3" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a></span>
+                <div class="line-part-1">
+                  <div class="circle"></div>
+                  <a href="https://tic-tac-toe-roan-xi.vercel.app/" id="link-morpion" target="_blank"><span class="projectTitle">Tic-Tac-Toe</span></a>
+                  <br>
+                </div>
+                <div class="line-part-2">
+                  <span class="languages">
+                    <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript &nbsp;&nbsp;
+                    <a href="https://github.com/YannGUIOT/TIC-TAC-TOE/blob/master/script.js" target="_blank"><img id="folder-logo3" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a></span>
+                </div>
               </div>
               <br>
               <div class="descriptionLink">
-                <div class="circle"></div>
-                <a href="https://minesweeper-ten-brown.vercel.app/" id="link-minesweeper" target="_blank"><span class="projectTitle">MinesWeeper</span></a>
-                <br>
-                <span class="languages">
-                  <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span>
+                <div class="line-part-1">
+                  <div class="circle"></div>
+                  <a href="https://minesweeper-ten-brown.vercel.app/" id="link-minesweeper" target="_blank"><span class="projectTitle">MinesWeeper</span></a>
+                  <br>
+                </div>
+                <div class="line-part-2">
+                  <span class="languages">
+                    <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span>
+                </div>
               </div>
               <br>
               <div class="descriptionLink">
-                <div class="circle"></div>
-                <a href="https://kaa-game.vercel.app/" id="link-kaagame" target="_blank"><span class="projectTitle">Kaamelott Game</span></a>
-                <br>
-                <span class="languages">
-                  <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span>
+                <div class="line-part-1">
+                  <div class="circle"></div>
+                  <a href="https://kaa-game.vercel.app/" id="link-kaagame" target="_blank"><span class="projectTitle">Kaamelott Game</span></a>
+                  <br>
+                </div>
+                <div class="line-part-2">
+                  <span class="languages">
+                    <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span>
+                </div>
               </div>
               <br>
               <div class="descriptionLink">
-                <div class="circle"></div>
-                <a href="https://boiler-shop-react.vercel.app/" id="link-boutique" target="_blank"><span class="projectTitle">Online Store Example</span></a>
-                <br>
-                <span class="languages">
-                  <div class="round REACT"></div>React Js</span>
+                <div class="line-part-1">
+                  <div class="circle"></div>
+                  <a href="https://boiler-shop-react.vercel.app/" id="link-boutique" target="_blank"><span class="projectTitle">Online Store Example</span></a>
+                  <br>
+                </div>
+                <div class="line-part-2">
+                  <span class="languages">
+                    <div class="round REACT"></div>React Js</span>
+                </div>
               </div>
               <br>
               <div class="descriptionLink">
-                <div class="circle"></div>
-                <a href="https://velib-api-yannguiot.vercel.app/" id="link-velib" target="_blank"><span class="projectTitle">Velib API Example</span></a>
-                <br>
-                <span class="languages">
-                  <div class="round REACT"></div>React Js</span>
+                <div class="line-part-1">
+                  <div class="circle"></div>
+                  <a href="https://velib-api-yannguiot.vercel.app/" id="link-velib" target="_blank"><span class="projectTitle">Velib API Example</span></a>
+                  <br>
+                </div>
+                <div class="line-part-2">
+                  <span class="languages">
+                    <div class="round REACT"></div>React Js</span>
+                </div>
               </div>
               <br>
               <div class="descriptionLink">
-                <div class="circle"></div>
-                <a href="https://angular-pokemon-app-jet.vercel.app/" id="link-pokemon" target="_blank"><span class="projectTitle">Pokemon App</span></a>
-                <br>
-                <span class="languages">
-                  <div class="round ANGULAR"></div>Angular<div class="round TYPESCRIPT"></div>TypeScript &nbsp;&nbsp;
-                  <a href="https://github.dev/YannGUIOT/Angular_Pokemon_App/tree/master/src/app" target="_blank"><img id="folder-logo4" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a></span>
+                <div class="line-part-1">
+                  <div class="circle"></div>
+                  <a href="https://angular-pokemon-app-jet.vercel.app/" id="link-pokemon" target="_blank"><span class="projectTitle">Pokemon App</span></a>
+                  <br>
+                </div>
+                <div class="line-part-2">
+                  <span class="languages">
+                    <div class="round ANGULAR"></div>Angular<div class="round TYPESCRIPT"></div>TypeScript &nbsp;&nbsp;
+                    <a href="https://github.dev/YannGUIOT/Angular_Pokemon_App/tree/master/src/app" target="_blank"><img id="folder-logo4" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a></span>
+                </div>
               </div>
               <br>
               <div class="descriptionLink">
-                <div class="circle"></div>
-                <a href="https://visit-card-app.vercel.app/" id="link-visitcard" target="_blank"><span class="projectTitle">Visit Card App</span></a>
-                <br>
-                <span class="languages">
-                  <div class="round REACT"></div>React Js &nbsp;&nbsp;
-                  <a href="https://github.com/YannGUIOT/Visit_Card_App/blob/master/src/class/Card.jsx" target="_blank"><img id="folder-logo5" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a></span>
+                <div class="line-part-1">
+                  <div class="circle"></div>
+                  <a href="https://visit-card-app.vercel.app/" id="link-visitcard" target="_blank"><span class="projectTitle">Visit Card App</span></a>
+                  <br>
+                </div>
+                <div class="line-part-2">
+                  <span class="languages">
+                    <div class="round REACT"></div>React Js &nbsp;&nbsp;
+                    <a href="https://github.com/YannGUIOT/Visit_Card_App/blob/master/src/class/Card.jsx" target="_blank"><img id="folder-logo5" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a></span>
+                </div>
               </div>
               <br>
               <div class="descriptionLink">
-                <div class="circle"></div>
-                <a href="https://buddha-quiz.vercel.app/" id="link-buddha" target="_blank"><span class="projectTitle">Buddha Quiz</span></a>
-                <br>
-                <span class="languages">
-                  <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript &nbsp;&nbsp;
-                  <a href="https://github.com/YannGUIOT/jQuery-Buddha-Quiz/blob/master/script.js" target="_blank"><img id="folder-logo6" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a></span>
+                <div class="line-part-1">
+                  <div class="circle"></div>
+                  <a href="https://buddha-quiz.vercel.app/" id="link-buddha" target="_blank"><span class="projectTitle">Buddha Quiz</span></a>
+                  <br>
+                </div>
+                <div class="line-part-2">
+                  <span class="languages">
+                    <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript &nbsp;&nbsp;
+                    <a href="https://github.com/YannGUIOT/jQuery-Buddha-Quiz/blob/master/script.js" target="_blank"><img id="folder-logo6" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a></span>
+                </div>
               </div>
               <br>
               <div class="descriptionLink">
-                <div class="circle"></div>
-                <a href="https://designextjs.vercel.app/" id="link-designext" target="_blank"><span class="projectTitle">Design Examples</span></a>
-                <br>
-                <span class="languages">
-                  <div class="round NEXT"></div>Next Js&nbsp;&nbsp;
-                </span>
+                <div class="line-part-1">
+                  <div class="circle"></div>
+                  <a href="https://designextjs.vercel.app/" id="link-designext" target="_blank"><span class="projectTitle">Design Examples</span></a>
+                  <br>
+                </div>
+                <div class="line-part-2">
+                  <span class="languages">
+                    <div class="round NEXT"></div>Next Js&nbsp;&nbsp;
+                  </span>
+                </div>
               </div>
               <br>
             </div>
