--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
       <div class="welcome">
         <div class="welcomBan"><img id="ban-img" src="./assets/img/welcome-1.jpg" oncontextmenu="return false;" alt="welcome" width="auto" height="auto"/></div>
-        <div class="status"><div class="round ONLINE"></div><i>&nbsp;[ <strong>FREELANCE</strong> ] - Open to Work</i></div>
+        <div class="status"><div class="round ONLINE"></div><i>&nbsp;[ <strong><a href="https://www.malt.fr/profile/yannguiot" target="_blank">FREELANCE</a></strong> ] - Open to Work</i></div>
         <div class="projects">
           <div class="project">
             <div class="title">THP - FORMATION FULLSTACK - FINAL GROUP PROJECTS</div>
