--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
               <p>LinkedIn</p>
             </div>
           </a>
+          <a href="https://www.malt.fr/profile/yannguiot" target="_blank">
+            <div class="link">
+              <img src="./assets/img/icons/malt-logo.png" alt="linkedin" width="32px" height="32px">
+              <p>Malt</p>
+            </div>
+          </a>
           <button onclick="openPopUpCV()">CV</button>
         </div>
         <br><br>
