--- a/index.html
+++ b/index.html
@@ -114,45 +114,8 @@
             </div>
           </div>
           <div class="project">
-            <div class="title">PERSONAL STUDY EXERCISES</div>
-            <div class="description">
-              <br>
-              <div class="descriptionLink">
-                <div class="line-part-1">
-                  <div class="circle"></div>
-                  <a href="https://tic-tac-toe-roan-xi.vercel.app/" id="link-morpion" target="_blank"><span class="projectTitle">Tic-Tac-Toe</span></a>
-                  <br>
-                </div>
-                <div class="line-part-2">
-                  <span class="languages">
-                    <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript &nbsp;&nbsp;
-                    <a href="https://github.com/YannGUIOT/TIC-TAC-TOE/blob/master/script.js" target="_blank"><img id="folder-logo3" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a></span>
-                </div>
-              </div>
-              <br>
-              <div class="descriptionLink">
-                <div class="line-part-1">
-                  <div class="circle"></div>
-                  <a href="https://minesweeper-ten-brown.vercel.app/" id="link-minesweeper" target="_blank"><span class="projectTitle">MinesWeeper</span></a>
-                  <br>
-                </div>
-                <div class="line-part-2">
-                  <span class="languages">
-                    <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span>
-                </div>
-              </div>
-              <br>
-              <div class="descriptionLink">
-                <div class="line-part-1">
-                  <div class="circle"></div>
-                  <a href="https://kaa-game.vercel.app/" id="link-kaagame" target="_blank"><span class="projectTitle">Kaamelott Game</span></a>
-                  <br>
-                </div>
-                <div class="line-part-2">
-                  <span class="languages">
-                    <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span>
-                </div>
-              </div>
+            <div class="title">PERSONAL WEB APP PROJECTS</div>
+              <div class="description">
               <br>
               <div class="descriptionLink">
                 <div class="line-part-1">
@@ -207,19 +170,6 @@
               <div class="descriptionLink">
                 <div class="line-part-1">
                   <div class="circle"></div>
-                  <a href="https://buddha-quiz.vercel.app/" id="link-buddha" target="_blank"><span class="projectTitle">Buddha Quiz</span></a>
-                  <br>
-                </div>
-                <div class="line-part-2">
-                  <span class="languages">
-                    <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript &nbsp;&nbsp;
-                    <a href="https://github.com/YannGUIOT/jQuery-Buddha-Quiz/blob/master/script.js" target="_blank"><img id="folder-logo6" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a></span>
-                </div>
-              </div>
-              <br>
-              <div class="descriptionLink">
-                <div class="line-part-1">
-                  <div class="circle"></div>
                   <a href="https://designextjs.vercel.app/" id="link-designext" target="_blank"><span class="projectTitle">Design Examples</span></a>
                   <br>
                 </div>
@@ -227,6 +177,61 @@
                   <span class="languages">
                     <div class="round NEXT"></div>Next Js&nbsp;&nbsp;
                   </span>
+                </div>
+              </div>
+              <br>
+            </div>
+            <br>
+            <div class="title">PERSONAL GAME PROJECTS</div>
+              <div class="description">
+              <br>
+              <div class="descriptionLink">
+                <div class="line-part-1">
+                  <div class="circle"></div>
+                  <a href="https://tic-tac-toe-roan-xi.vercel.app/" id="link-morpion" target="_blank"><span class="projectTitle">Tic-Tac-Toe</span></a>
+                  <br>
+                </div>
+                <div class="line-part-2">
+                  <span class="languages">
+                    <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript &nbsp;&nbsp;
+                    <a href="https://github.com/YannGUIOT/TIC-TAC-TOE/blob/master/script.js" target="_blank"><img id="folder-logo3" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a></span>
+                </div>
+              </div>
+              <br>
+              <div class="descriptionLink">
+                <div class="line-part-1">
+                  <div class="circle"></div>
+                  <a href="https://minesweeper-ten-brown.vercel.app/" id="link-minesweeper" target="_blank"><span class="projectTitle">MinesWeeper</span></a>
+                  <br>
+                </div>
+                <div class="line-part-2">
+                  <span class="languages">
+                    <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span>
+                </div>
+              </div>
+              <br>
+              <div class="descriptionLink">
+                <div class="line-part-1">
+                  <div class="circle"></div>
+                  <a href="https://kaa-game.vercel.app/" id="link-kaagame" target="_blank"><span class="projectTitle">Kaamelott Game</span></a>
+                  <br>
+                </div>
+                <div class="line-part-2">
+                  <span class="languages">
+                    <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript</span>
+                </div>
+              </div>
+              <br>
+              <div class="descriptionLink">
+                <div class="line-part-1">
+                  <div class="circle"></div>
+                  <a href="https://buddha-quiz.vercel.app/" id="link-buddha" target="_blank"><span class="projectTitle">Buddha Quiz</span></a>
+                  <br>
+                </div>
+                <div class="line-part-2">
+                  <span class="languages">
+                    <div class="round HTML"></div>HTML<div class="round CSS"></div>CSS<div class="round JS"></div>JavaScript &nbsp;&nbsp;
+                    <a href="https://github.com/YannGUIOT/jQuery-Buddha-Quiz/blob/master/script.js" target="_blank"><img id="folder-logo6" src="./assets/img/icons/folder-1.png" alt="folder" width="auto" height="14px"></a></span>
                 </div>
               </div>
               <br>
